--- a/sections/recetas-express.html
+++ b/sections/recetas-express.html
@@ -16,47 +16,46 @@
     <div class="grillaRecetasExp" data-aos="fade-down"
     data-aos-easing="linear"
     data-aos-duration="1000">
-        <header class="header">
-            <nav class="navbar navbar-expand-md">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./contacto.html">Contacto</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Mi Libro
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./recetas.html">Recetas</a></li>
-                                    <li><a class="dropdown-item" href="./recetas-express.html"> Recetas
-                                            Express</a>
-                                    </li>
+    <header class="header">
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent" style= "background-color: rgb(205, 249, 255)">
+                    <ul class="navbar-nav me-auto mb-0 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button"      data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Mi Libro
+                            </a>
+                            <ul class="dropdown-menu" style= "background-color: rgb(205, 249, 255)">
+                                <li><a class="dropdown-item" href="./recetas.html">Recetas</a></li>
+                                <li><a class="dropdown-item" href="./recetas-express.html"> Recetas
+                                        Express</a></li>
+                                <li><a class="dropdown-item" href="./postres.html">Postres</a></li>
 
-                                </ul>
-                            </li>
+                            </ul>
+                        </li>
 
-                        </ul>
+                    </ul>
 
-                    </div>
                 </div>
-            </nav>
-        </header>
-
+            </div>
+        </nav>
+    </header>
         <main class="recetasExp1">
-            <h1>Rollitos de Jamón y Queso</h1>
+            <h1 class="shadow p-2">Rollitos de Jamón y Queso</h1>
             <hr>
-
+            
             <img class="imgrecetasexp" src="../img/fotoExpress.jpeg" alt="img rollitos de jyq">
             <p class="pExpress">Te comparto una receta super express, que acepta una gran variedad de rellenos, los
                 hago en fiestas y cumpleaños, incluso suelo tenerlos frizados y al sacarlos les doy un golpe de horno.
@@ -66,7 +65,7 @@
         </main>
 
         <section class="recetasExp2">
-            <h2 class="h2recetas">
+            <h2 class="h2recetas shadow p-2">
                 Ingredientes
             </h2>
             <ul>
@@ -93,7 +92,7 @@
         </section>
 
         <section class="recetasExp3">
-            <h2 class="h2recetas">
+            <h2 class="h2recetas shadow p-2">
                 Preparación
             </h2>
             <ul>
