--- a/sections/recetas.html
+++ b/sections/recetas.html
@@ -16,51 +16,51 @@
     <div class="grillaRecetas" data-aos="fade-down"
     data-aos-easing="linear"
     data-aos-duration="1000">
-        <header class="header">
-            <nav class="navbar navbar-expand-md">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./contacto.html">Contacto</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Mi Libro
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./recetas.html">Recetas</a></li>
-                                    <li><a class="dropdown-item" href="./recetas-express.html"> Recetas
-                                            Express</a>
-                                    </li>
+    <header class="header">
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent" style= "background-color: rgb(205, 249, 255)">
+                    <ul class="navbar-nav me-auto mb-0 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button"      data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Mi Libro
+                            </a>
+                            <ul class="dropdown-menu" style= "background-color: rgb(205, 249, 255)">
+                                <li><a class="dropdown-item" href="./recetas.html">Recetas</a></li>
+                                <li><a class="dropdown-item" href="./recetas-express.html"> Recetas
+                                        Express</a></li>
+                                <li><a class="dropdown-item" href="./postres.html">Postres</a></li>
 
-                                </ul>
-                            </li>
+                            </ul>
+                        </li>
 
-                        </ul>
+                    </ul>
 
-                    </div>
                 </div>
-            </nav>
-        </header>
+            </div>
+        </nav>
+    </header>
 
         <main class="recetasTitulo">
-            <h1>Pasta con Atún y Tomate</h1>
+            <h1 class="shadow p-2">Pasta con Atún y Tomate</h1>
             <hr>
             <img class="imgrecetas" src="../img/fotoRecetas.jpg" alt="pasta con atun y tomate">
         </main>
 
         <section class="recetasPart1">
-            <h2 class="h2recetas">Tips a tener en cuenta para la pasta seca</h2>
+            <h2 class="h2recetas shadow p-2">Tips a tener en cuenta para la pasta seca</h2>
             <ul>
                 <li>
                     Cuanta pasta por persona: Se calculan de 80 a 100 gr de pasta seca por persona.
@@ -86,7 +86,7 @@
         </section>
 
         <section class="recetasPart2">
-            <h2 class="h2recetas">Ingredientes</h2>
+            <h2 class="h2recetas shadow p-2">Ingredientes</h2>
             <h4>Para 4 personas:</h4>
             <ul>
                 <li>
@@ -138,7 +138,7 @@
         
         <section class="recetasPart3">
             <hr>
-            <h2 class="h2recetas">Preparación</h2>
+            <h2 class="h2recetas shadow p-2">Preparación</h2>
             <ul>
                 <li>
                     Encender el horno y precalentar a 180 grados.
@@ -179,16 +179,16 @@
 
         <section class="recetasPart4">
             <hr>
-            <h2 class="h2recetas">
+            <h2 class="h2recetas shadow p-2">
                 Secreto para hacer pasta 1: El agua
             </h2>
             <p>Ponen el agua a calentar, y una vez que haya hervido, recién ahí agregan la sal! apapapapa, les cambió la
                 vida? un poquito. El agua hierve más rápido, ahorran tiempo y gas!</p>
-            <h2 class="h2recetas">
+            <h2 class="h2recetas shadow p-2">
                 Secreto para hacer pasta 2: La sal
             </h2>
             <p>Proporción: Cada 100 gr de pasta, 1 litro de agua. ¿y cuánta sal? 10-12gr de sal por litro de agua.</p>
-            <h2 class="h2recetas">
+            <h2 class="h2recetas shadow p-2">
                 Secreto para hacer pasta 3: La pasta
             </h2>
             <p>¿Que pasta elegir? Siempre lo mejor es elegir pastas 100% trigo candeal</p>
