--- a/sections/postres.html
+++ b/sections/postres.html
@@ -99,12 +99,34 @@
                 <hr>
             </div>
             <div>
-                <ol>Fundir el chocolate con la manteca cortada en cubos, en el microondas cada 20 segundos para no quemarlo o baño maría.</ol>
-                <ol>Batir los huevos con el azucar hasta obtener una mezcla bien cremosa, aca hay algunas posturas distintas, algunos baten a punto letra, pero mi receta es batir poco, con batidor a mano, asi me la enseño mi vecina, para que no aporte mucho aire y salgan humedos por dentro y no tipo torta.</ol>
-                <ol>Tamizar la harina con el cacao y reservar.</ol>
-                <ol>Agregar a la mezcla de huevos el chocolate derretido con la manteca, y mezclar bien, añadir la harina y unificar todo.</ol>
-                <ol>Forrar con papel manteca en al base un molde cuadrado de 20 por 20 o rectangular de 20 x 30.</ol>
-                <ol>Volcar la mezcla y llevar a un horno fuerte, hasta que se haga la capa crocante y al probar con un palillo salga con migas pegadas y no con masa, pero si sale seco el brownie se paso.</ol>
+                <p>
+                    Fundir el chocolate con la manteca cortada en cubos, en el microondas cada 20 segundos para no quemarlo o baño maría.
+                </p>
+            </div>
+            <div>
+                <p>
+                    Batir los huevos con el azucar hasta obtener una mezcla bien cremosa, aca hay algunas posturas distintas, algunos baten a punto letra, pero mi receta es batir poco, con batidor a mano, asi me la enseño mi vecina, para que no aporte mucho aire y salgan humedos por dentro y no tipo torta.
+                </p>
+            </div>
+            <div>
+                <p>
+                    Tamizar la harina con el cacao y reservar.
+                </p>
+            </div>
+            <div>
+                <p>
+                    Agregar a la mezcla de huevos el chocolate derretido con la manteca, y mezclar bien, añadir la harina y unificar todo.
+                </p>
+            </div>
+            <div>
+                <p>
+                    Forrar con papel manteca en al base un molde cuadrado de 20 por 20 o rectangular de 20 x 30.
+                </p>
+            </div>
+            <div>
+                <p>
+                    Volcar la mezcla y llevar a un horno fuerte, hasta que se haga la capa crocante y al probar con un palillo salga con migas pegadas y no con masa, pero si sale seco el brownie se paso.
+                </p>
             </div>
         </section>
 
