--- a/sections/recetas-express.html
+++ b/sections/recetas-express.html
@@ -95,27 +95,31 @@
             <h2 class="h2recetas shadow p-2">
                 Preparación
             </h2>
-            <ul>
-                <li>
+            <div>
+                <p>
                     Estirar la masa un poco para darle forma cuadrada y pincelar con mostaza.
-                </li>
-
-                <li>
+                </p>
+            </div>
+            <div>
+                <p>
                     En el borde colocar una fila de aceituna.
-                </li>
-
-                <li>
+                </p>
+            </div>
+            <div>
+                <p>
                     Cubrir la masa con las fetas de jamón y encima las de queso.
-                </li>
-
-                <li>
+                </p>
+            </div>
+            <div>
+                <p>
                     Enrollar y cortar en rodajas del tamaño que te gusten, y espolvorear con queso rallado.
-                </li>
-
-                <li>
+                </p>
+            </div>
+            <div>
+                <p>
                     Llevar al horno hasta gratinar.
-                </li>
-            </ul>
+                </p>
+            </div>
             
         </section>
 
