--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="cocina, recetas, postres, pastas, carne">
+    <meta name="keywords" content="cocina, recetas, postres, pastas, carne, tips, secretos, atun, chocolate,brownies">
     <meta name="description" content="Comparto recetas y tips de cocina. Pastas, carnes, postres y mucho más.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -13,7 +13,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/estilos.css">
     <link rel="shortcut icon" href="./img/favicom.png" type="image/x-icon">
-    <title>Cocina Sin Delantal</title>
+    <title>Cocina Sin Delantal - Comparto recetas y tips de Cocina</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent" style= "background-color: rgb(205, 249, 255)">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="background-color: rgb(205, 249, 255)">
                         <ul class="navbar-nav me-auto mb-0 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
@@ -39,7 +39,7 @@
                                     aria-expanded="false">
                                     Mi Libro
                                 </a>
-                                <ul class="dropdown-menu" style= "background-color: rgb(205, 249, 255)">
+                                <ul class="dropdown-menu" style="background-color: rgb(205, 249, 255)">
                                     <li><a class="dropdown-item" href="./sections/recetas.html">Recetas</a></li>
                                     <li><a class="dropdown-item" href="./sections/recetas-express.html"> Recetas
                                             Express</a></li>
@@ -100,7 +100,7 @@
                             <img src="./img/fotoRecetas.jpg" class="d-block w-100 imgcarousel" alt="pastas">
                         </div>
                         <div class="carousel-item">
-                            <img src="./img/fotoExpress.jpeg" class="d-block w-100 imgcarousel" alt="rollitosjyq">
+                            <img src="./img/fotoExpress.jpeg" class="d-block w-100 imgcarousel" alt="rollitosJamonyQueso">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -132,7 +132,7 @@
                 <div>
                     <h2 class="h2footer">Seguime</h2>
                     <a href="https://www.instagram.com/gloriatonin/" target="_blank"><img class="iconig"
-                            src="./img/instagram64.svg" alt="icon"></a>
+                            src="./img/instagram64.svg" alt="icono-instagram"></a>
                 </div>
 
             </section>
