--- a/sections/recetas.html
+++ b/sections/recetas.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="cocina, recetas, atun, pastas, carne, fideos,secretos">
+    <meta name="description" content="En esta ocasión comparto mi receta de pastas con atún y tomate, no te pierdas mis tips exclusivos!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -235,7 +237,7 @@
 
         <div class="recetasPart5">
             <figure>
-                <img class="imgrecetas" src="../img/receta1.jpg" alt="imagenreceta">
+                <img class="imgrecetas" src="../img/receta1.jpg" alt="imagen-receta">
             </figure>
         </div>
 
@@ -246,14 +248,11 @@
                 <div>
                     <h2>Seguime</h2>
                     <a href="https://www.instagram.com/gloriatonin/" target="_blank"><img class="iconig"
-                            src="../img/instagram64.svg" alt="icon"></a>
+                            src="../img/instagram64.svg" alt="icono-instagram"></a>
                 </div>
 
             </section>
         </footer>
-
-
-
 
     </div>
 
@@ -268,6 +267,7 @@
     <script>
         AOS.init();
     </script>
+
 </body>
 
 </html>
