--- a/sections/postres.html
+++ b/sections/postres.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="cocina, recetas, postres, chocolate, cacao, brownie,esponjoso">
+    <meta name="description" content="Les comparto mi receta de brownies, quedan ricos y esponjosos. Con tips extras a elección para disfrutar con amigos y familia!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
@@ -56,22 +58,24 @@
                 <h1 class="shadow p-2">Brownies</h1>
                 <hr>
             </div>
-            
+
             <div>
                 <img class="imgpostres" src="../img/brownies.webp" alt="brownies">
             </div>
             <div>
-                <p>Te comparto mi receta de brownies, simple y fácil, húmedos y suaves, con esa capita crujiente por fuera y
-                todo el aroma y sabor del chocolate amargo.
+                <p>Te comparto mi receta de brownies, simple y fácil, húmedos y suaves, con esa capita crujiente por
+                    fuera y
+                    todo el aroma y sabor del chocolate amargo.
 
-                Si hay algo inconfundible es el aroma de los brownies recien hecho invadiendo toda la casa.
+                    Si hay algo inconfundible es el aroma de los brownies recien hecho invadiendo toda la casa.
 
-                Es una recetas que te aprendes de memoria, porque sabes que a todos les gusta y que con pocos
-                ingredientes tenes uno de los postres amados por todos, y con el copete de helado de americana es tocar
-                el cielo con las manos!!!</p>
+                    Es una recetas que te aprendes de memoria, porque sabes que a todos les gusta y que con pocos
+                    ingredientes tenes uno de los postres amados por todos, y con el copete de helado de americana es
+                    tocar
+                    el cielo con las manos!!!</p>
                 <hr>
             </div>
-            
+
         </main>
 
         <section class="postres2">
@@ -101,12 +105,15 @@
             </div>
             <div>
                 <p>
-                    Fundir el chocolate con la manteca cortada en cubos, en el microondas cada 20 segundos para no quemarlo o baño maría.
+                    Fundir el chocolate con la manteca cortada en cubos, en el microondas cada 20 segundos para no
+                    quemarlo o baño maría.
                 </p>
             </div>
             <div>
                 <p>
-                    Batir los huevos con el azucar hasta obtener una mezcla bien cremosa, aca hay algunas posturas distintas, algunos baten a punto letra, pero mi receta es batir poco, con batidor a mano, asi me la enseño mi vecina, para que no aporte mucho aire y salgan humedos por dentro y no tipo torta.
+                    Batir los huevos con el azucar hasta obtener una mezcla bien cremosa, aca hay algunas posturas
+                    distintas, algunos baten a punto letra, pero mi receta es batir poco, con batidor a mano, asi me la
+                    enseño mi vecina, para que no aporte mucho aire y salgan humedos por dentro y no tipo torta.
                 </p>
             </div>
             <div>
@@ -116,7 +123,8 @@
             </div>
             <div>
                 <p>
-                    Agregar a la mezcla de huevos el chocolate derretido con la manteca, y mezclar bien, añadir la harina y unificar todo.
+                    Agregar a la mezcla de huevos el chocolate derretido con la manteca, y mezclar bien, añadir la
+                    harina y unificar todo.
                 </p>
             </div>
             <div>
@@ -126,7 +134,8 @@
             </div>
             <div>
                 <p>
-                    Volcar la mezcla y llevar a un horno fuerte, hasta que se haga la capa crocante y al probar con un palillo salga con migas pegadas y no con masa, pero si sale seco el brownie se paso.
+                    Volcar la mezcla y llevar a un horno fuerte, hasta que se haga la capa crocante y al probar con un
+                    palillo salga con migas pegadas y no con masa, pero si sale seco el brownie se paso.
                 </p>
             </div>
         </section>
@@ -141,30 +150,30 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>
+                        aria-label="Slide 4"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                    aria-label="Slide 5"></button>
+                        aria-label="Slide 5"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
-                    aria-label="Slide 6"></button>
-                </div>   
+                        aria-label="Slide 6"></button>
+                </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../img/prepBrownie1.webp" class="d-block w-100 imgcarousel" alt="brownies1">
+                        <img src="../img/prepBrownie1.webp" class="d-block w-100 imgcarousel" alt="imagen-brownies1">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/prepBrownie2.webp" class="d-block w-100 imgcarousel" alt="brownies2">
+                        <img src="../img/prepBrownie2.webp" class="d-block w-100 imgcarousel" alt="imagen-brownies2">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/prepBrownie3.webp" class="d-block w-100 imgcarousel" alt="brownies3">
+                        <img src="../img/prepBrownie3.webp" class="d-block w-100 imgcarousel" alt="imagen-brownies3">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/prepBrownie4.webp" class="d-block w-100 imgcarousel" alt="brownies4">
+                        <img src="../img/prepBrownie4.webp" class="d-block w-100 imgcarousel" alt="imagen-brownies4">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/prepBrownie5.webp" class="d-block w-100 imgcarousel" alt="brownies5">
+                        <img src="../img/prepBrownie5.webp" class="d-block w-100 imgcarousel" alt="imagen-brownies5">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/prepBrownie6.webp" class="d-block w-100 imgcarousel" alt="brownies6">
+                        <img src="../img/prepBrownie6.webp" class="d-block w-100 imgcarousel" alt="imagen-brownies6">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -181,26 +190,29 @@
         </section>
 
 
-
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-        </script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script>
-            AOS.init();
-        </script>
         <footer class="footer">
             <section>
                 <div>
                     <h2>Seguime</h2>
                     <a href="https://www.instagram.com/gloriatonin/" target="_blank"><img class="iconig"
-                            src="../img/instagram64.svg" alt="icon"></a>
+                            src="../img/instagram64.svg" alt="icono-instagram"></a>
                 </div>
 
             </section>
         </footer>
+
     </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
+
 </body>
 
 </html>
