--- a/sections/recetas-express.html
+++ b/sections/recetas-express.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="cocina, recetas, rollitos, arrollado, jamon, queso, rapido, express">
+    <meta name="description" content="Les comparto mi receta de rollitos de jamón y queso. Rica, rápida y fácil de preparar. Ideal para cuando tenes poco tiempo y no sabes que preparar!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -57,7 +59,7 @@
             <h1 class="shadow p-2">Rollitos de Jamón y Queso</h1>
             <hr>
             
-            <img class="imgrecetasexp" src="../img/fotoExpress.jpeg" alt="img rollitos de jyq">
+            <img class="imgrecetasexp" src="../img/fotoExpress.jpeg" alt="img-rollitos-JamonyQueso">
             <p class="pExpress">Te comparto una receta super express, que acepta una gran variedad de rellenos, los
                 hago en fiestas y cumpleaños, incluso suelo tenerlos frizados y al sacarlos les doy un golpe de horno.
 
@@ -126,9 +128,9 @@
 
         <section class="recetasExp4">
             <hr>
-            <img class="imgExp"  src="../img/jyq1.webp" alt="img jyq1">
-            <img class="imgExp"  src="../img/jyq2.webp" alt="img jyq2">
-            <img class="imgExp"  src="../img/jyq3.webp" alt="img jyq3">
+            <img class="imgExp"  src="../img/jyq1.webp" alt="imagen-rollito-1">
+            <img class="imgExp"  src="../img/jyq2.webp" alt="imagen-rollito-2">
+            <img class="imgExp"  src="../img/jyq3.webp" alt="imagen-rollito-3">
         </section>
             
 
@@ -139,7 +141,7 @@
                     <div>
                         <h2>Seguime</h2>
                         <a href="https://www.instagram.com/gloriatonin/" target="_blank"><img class="iconig"
-                                src="../img/instagram64.svg" alt="icon"></a>
+                                src="../img/instagram64.svg" alt="icono-instagram"></a>
                     </div>
 
                 </section>
@@ -154,6 +156,7 @@
     <script>
         AOS.init();
     </script>
+
 </body>
 
 </html>
